--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,9 +1,20 @@
 .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: top;
+  font-size: 1rem;
+}
+
+.dataTable {
+  table-layout: fixed !important;
+}
+
+.dataTable th:nth-child(1) {
+  width: 50%;
+}
+
+.dataTable th:nth-child(2) {
+  width: 50%;
 }
