--- a/src/components/MappingPage/MappingPage.css
+++ b/src/components/MappingPage/MappingPage.css
@@ -1,5 +1,7 @@
 .mappingPage {
   justify-content: center;
+  padding: 0 10%;
+  background-color: #efefef;
 }
 
 .dataTable {
@@ -27,4 +29,21 @@
 
 .mappingMultiSelect span.overflow {
   max-width: fit-content !important;
+}
+
+.matchThreshold {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin-top: 4px;
+}
+
+.threshLabel {
+  font-size: 14px;
+}
+
+.threshDescription {
+  font-size: 12px;
+  color: #666;
+  margin: 8px 0 32px 0;
 }
