feat: make data set selects searchable and fix display issue with long de names

--- a/src/components/MappingPage/MappingPage.css
+++ b/src/components/MappingPage/MappingPage.css
@@ -35,7 +35,7 @@
 }
 
 .mappingMultiSelect span.overflow {
-  max-width: fit-content !important;
+  max-width: 590px !important;
 }
 
 .matchThreshold {
