feat: add csv export functionality

--- a/src/components/MappingPage/MappingPage.css
+++ b/src/components/MappingPage/MappingPage.css
@@ -6,9 +6,17 @@
 
 .tableControls {
   display: flex;
-  justify-content: space-between;
   align-items: flex-end;
+  gap: 16px;
   margin-bottom: 24px;
+}
+
+.thresholdSection {
+  margin-right: auto;
+}
+
+.exportButton {
+  margin-left: auto;
 }
 
 .dataTable {
@@ -53,4 +61,8 @@
   font-size: 12px;
   color: #666;
   margin: 8px 0 0 0;
+}
+
+.hidden {
+  display: none;
 }
