feat: add url upload support to refresh button

--- a/src/components/SetupPage/SetupPage.css
+++ b/src/components/SetupPage/SetupPage.css
@@ -65,6 +65,11 @@ button.configMap {
   width: 100%;
 }
 
+.patActions {
+  display: flex;
+  justify-content: space-between;
+}
+
 .uploadDsSelect {
   display: flex;
   flex-wrap: wrap;
