--- a/src/components/MappingPage/MappingPage.css
+++ b/src/components/MappingPage/MappingPage.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 
-.tableControls {
+.mappingControls {
   display: flex;
   align-items: flex-end;
   gap: 16px;
@@ -41,7 +41,12 @@
 
 .noSubMaps > thead > tr > th:nth-child(1),
 .noSubMaps > thead > tr > th:nth-child(2) {
-  width: 50%;
+  width: calc(50% - 30px);
+}
+
+.noSubMaps > thead > tr > th:nth-child(3),
+.withSubMaps > thead > tr > th:nth-child(4) {
+  width: 70px;
 }
 
 .mappingMultiSelect {
@@ -84,4 +89,15 @@
 
 .dataTablePager div.dense div.root-input > div {
   overflow: hidden;
+}
+
+.tableActions {
+  display: flex;
+  justify-content: center;
+  margin-top: -62px;
+  gap: 16px;
+}
+
+.tableActions > * {
+  margin: 16px 0;
 }
